platform/30-kube-prometheus-stack/manifests/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-internal
  namespace: observability
  annotations:
    alb.ingress.kubernetes.io/group.name: petflow-dev-management
    alb.ingress.kubernetes.io/load-balancer-name: petflow-dev-management
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/inbound-cidrs: 10.0.0.0/20
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/tags: >-
      Project=petflow,Environment=dev,ManagedBy=aws-load-balancer-controller,Purpose=management
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - grafana.leechs.shop
  rules:
    - host: grafana.leechs.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-internal
  namespace: observability
  annotations:
    alb.ingress.kubernetes.io/group.name: petflow-dev-management
    alb.ingress.kubernetes.io/load-balancer-name: petflow-dev-management
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/inbound-cidrs: 10.0.0.0/20
    alb.ingress.kubernetes.io/healthcheck-path: /-/healthy
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/tags: >-
      Project=petflow,Environment=dev,ManagedBy=aws-load-balancer-controller,Purpose=management
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - prometheus.leechs.shop
  rules:
    - host: prometheus.leechs.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
